# fork-my-translator

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release.yml
docs/: future-plans.md  installation_guide.md  installation_guide_vi.md  installation_guide_win.md  installation_guide_win_vi.md  tts_guide.md  tts_guide_vi.md
src/: index.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/audio/: microphone.rs  mod.rs  system_audio.rs
src-tauri/src/commands/: audio.rs  local_pipeline.rs  mod.rs  settings.rs  transcript.rs
src/js/: app.js  google-tts.js  settings.js  soniox.js  ui.js
src/styles/: main.css
