[package]
name = "my-translator"
version = "0.2.0"
description = "Personal Real-time Speech Translator"
authors = ["phucnt"]
edition = "2021"

[lib]
name = "my_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
cpal = "0.15"

# macOS: ScreenCaptureKit for system audio
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
screencapturekit = "1.5"

# Windows: WASAPI for system audio
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_Foundation",
] }
